# bongosero

./: .gitattributes  .gitignore  Cargo.toml  README.md  log.txt
assets/sprites/: enemy.aseprite  present.aseprite  santa_crack.aseprite
dev diary/: log.txt
other/: Gorilla Sprite Sheet-20191111-223127.piskel
src/: bongosero_controller.rs  bongosero_movement.rs  bongosero_weapon.rs  controller.rs  debug_controller.rs  debug_movement.rs  debug_weapon.rs  enemy_factory.rs  game.rs  input_device.rs  keyboard_movement.rs  keyboard_weapon.rs  main.rs  phys.rs  resources.rs  state.rs  systems.rs  world.rs
src/game/: mod.rs
src/game/bullet/: components.rs  mod.rs  systems.rs
src/game/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/score/: resources.rs  systems.rs
src/game/star/: mod.rs  resources.rs  systems.rs
src/game/ui/game_over_menu/systems/: interactions.rs  layout.rs  updates.rs
src/game/ui/hud/: mod.rs  styles.rs
src/game/ui/hud/systems/: layout.rs  updates.rs
src/game/ui/pause_menu/systems/: interactions.rs  layout.rs
src/main_menu/systems/: interactions.rs  layout.rs
