[package]
name = "bongosero"
version = "0.2.0"
authors = ["Payne325 <alex.payne325@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc-adapter = {version = "0.1.2", features = ["libusb"]}
quicksilver = "0.4.0"
f-trak = "0.2.0"
rand = "0.8.5"

[features]
keyboard = [] # If used, keyboard controls are compiled, else bongo and camera controls used
debug = [] # If used, will print out debug information to std::out.