[package]
name = "bongosero"
version = "0.2.0"
authors = ["Payne325 <alex.payne325@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc-adapter = {version = "0.1.2", features = ["libusb"]}
f-trak = "0.2.0"
bevy = "0.10.0"
rand = "0.8.5"
bevy_aseprite = "0.10"

[features]